# weighted-code-coverage

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: deploy.yml  weighted-code-coverage.yml
data/test_project/: test.csv  test_fun.csv
src/: error.rs  files.rs  functions.rs  lib.rs  output.rs  utility.rs
src/cli/: mod.rs
src/concurrent/: files.rs  functions.rs  mod.rs
src/grcov/: covdir.rs  coveralls.rs  mod.rs
src/metrics/: crap.rs  mod.rs  skunk.rs  wcc.rs
src/templates/: files.html
templates/: base.html  base.html.jinja  file.html  file_details.html.jinja  files.html  files.html.jinja  functions.html  navbar.html.jinja
templates/css/: style.css
templates/js/: base_tooltips.js  common_tooltips.js  complexity.js  file_details_tooltips.js  tooltips.js
tests/: output_test.rs
tests/grcov_files/: grcov_covdir.json  grcov_coveralls.json
tests/seahorse/: covdir.json  coveralls.json
tests/snapshots/output/: output_cognitive_covdir_files.json.snap  output_cognitive_covdir_files.snap  output_cognitive_covdir_functions.json.snap  output_cognitive_covdir_functions.snap  output_cognitive_coveralls_files.json.snap  output_cognitive_coveralls_files.snap  output_cognitive_coveralls_functions.json.snap  output_cognitive_coveralls_functions.snap  output_covdir_files.snap  output_covdir_functions.snap  output_coveralls_functions.snap  output_cyclomatic_covdir_files.json.snap  output_cyclomatic_covdir_files.snap  output_cyclomatic_covdir_functions.json.snap  output_cyclomatic_covdir_functions.snap  output_cyclomatic_coveralls_files.json.snap  output_cyclomatic_coveralls_files.snap  output_cyclomatic_coveralls_functions.json.snap  output_cyclomatic_coveralls_functions.snap
