[package]
name = "weighted-code-coverage"
version = "0.3.0"
edition = "2021"
default-run = "weighted-code-coverage"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-code-analysis = "=0.0.24"
serde_json = { version = "^1.0", features = ["preserve_order"] }
serde = { version = "^1.0", features = ["derive"] }
thiserror = "=1.0.51"
clap = { version = "=4.4.11", features = ["derive"] }
csv = "=1.3.0"
crossbeam = "=0.8.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.8.0"
cargo_metadata = "^0.18"
minijinja = { version = "^1.0", features = ["loader"] }

[dev-dependencies]
insta = { version = "1.37.0", features = ["yaml", "redactions"] }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "unwind"
incremental = false
overflow-checks = false
strip = "debuginfo"